editor dashboard and pitching documentation done

--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -39,7 +39,7 @@
   <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a>.</p>
 
   <p class="question">What should I write about? </p>
-  <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
+  <p>Please Visit <a href="/choosing-a-topic">Pitching an Article</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
 
   <p class="question">What if I want to write something that doesn't fit a category? </p>
   <p>If you want to pitch an article idea that doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Facebook group to ask about your idea.</p>
@@ -63,5 +63,5 @@
   <p class="question">Have a question that wasn't answered here?</p>
   <p>Email us at editors@theteenmagazine.com or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
 
-  <p>Read "<a href="/choosing-a-topic">Choosing A Topic</a>" Next →</p>
+  <p>Read "<a href="/choosing-a-topic">Pitching an Article</a>" Next →</p>
 </div>
