--- a/app/views/pages/pitching_new_articles.html.erb
+++ b/app/views/pages/pitching_new_articles.html.erb
@@ -9,7 +9,7 @@
   <p>Next, fill out the updated form as shown below. All article topics that you pitch will now show up in <%= link_to("Unclaimed Pitches", pitches_path, :target => "_blank") %> and will be able to be claimed/written by any writer at The Teen Magazine. Make sure you've read this entire doc in detail and watched the videos before pitching any new topic.</p>
   <%= link_to(image_tag("editor_pitching.png", class: "image_fit_scrn mb-4"), new_pitch_path, :target => "_blank") %>
   <h4 id="Topic">Thinking of a topic:</h4>
-  <p>Any article that is pitched should be specifically made for a teenage audience. This means it addresses a topic, experience, and/or problem that is felt by some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already (see diagram).</p>
+  <p>Any article that is pitched should be specifically made for a teenage audience. This means it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already (see diagram).</p>
   <%= image_tag("specificity_diagram.png", class: "image_fit_scrn") %>
   <p>It can be helpful to keep some notes on your phone to jot down ideas for article topics. If you are currently in, or just graduated, high school, think about your daily life and the things that you are struggling with. What excites you? What scares you? What would you love to learn more about?
     Chances are your daily life is made up of experiences similar to those of lots of other teens your age. What you wonder about, what sparks your curiosity, what worries you, what stresses you out, are common experiences and should be drawn upon when thinking of new topics. Keep in mind that any article topic you pitch should fall in one of these categories:</p>
@@ -39,7 +39,7 @@
   <h5 id="Shareable">How to write shareable titles:</h5>
   <p>Shareable titles spark emotion, are intriguing, and make you want to find out more. </p>
   <p>Publications like BuzzFeed have mastered this. By just changing around certain words, you can make a huge difference in whether someone decides to read, and ultimately share, the article.</p>
-  <p>While a title needs to correctly reflect the contents of the article, designing it to envoke curiosity is extremely important. This can often be done with the use of a few simple words like "actually", "you", "see", "happened", "every", "beautiful", etc. See the below graphic for why these types of words can be so powerful to grab your attention.</p>
+  <p>While a title needs to correctly reflect the contents of the article, designing it to evoke curiosity is extremely important. This can often be done with the use of a few simple words like "actually", "you", "see", "happened", "every", "beautiful", etc. See the below graphic for why these types of words can be so powerful to grab your attention.</p>
   <%= image_tag("headlines_emotion.png", class: "image_fit_scrn") %>
   <p class="text-center"><small>Credit: <a href="https://neilpatel.com/blog/the-ultimate-guide-to-writing-irresistible-headlines-for-social-media/" target="_blank">Neil Patel</a></small></p>
   <p>Some of the most common forms of a shareable title can be:</p>
@@ -66,9 +66,9 @@
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/mGatSVaDi3g"></iframe>
   </div>
 
-  <p>For example, if you want to pitch an article that talks about the best movies on netflix, it is unlikely that the article can rank high for the keyword "Best Netflix Movies." If you search for this term, you'll see that huge, authoritative publications like Rotten Tomatoes, Vulture, NYTimes, DigitalTrends, and more are ranking on the first page. While this article would get readers who are already on The Teen Magazine, it is unlikely that even a very well, in-depth article would bring in any traffic at all from Google. This search term is just too competative.</p>
+  <p>For example, if you want to pitch an article that talks about the best movies on netflix, it is unlikely that the article can rank high for the keyword "Best Netflix Movies." If you search for this term, you'll see that huge, authoritative publications like Rotten Tomatoes, Vulture, NYTimes, DigitalTrends, and more are ranking on the first page. While this article would get readers who are already on The Teen Magazine, it is unlikely that even a very well, in-depth article would bring in any traffic at all from Google. This search term is just too competitive.</p>
 
-  <p>However, by simply narrowing the search term, the liklihood of ranking higher and bringing in new readers from Google is much better. Below is an example of how to do this.</p>
+  <p>However, by simply narrowing the search term, the likelihood of ranking higher and bringing in new readers from Google is much better. Below is an example of how to do this.</p>
 
   <p>1. Type phrases into Google related to your original search idea ("Best Netflix Movies") until you find a long-tail keyword that might be a good candidate. Sometimes a bit of creativity is needed to do this. The one I've decided to go with is "best coming of age romance movies."</p>
   <%= image_tag("search_1.png", class: "image_fit_scrn mb-4") %>
@@ -94,14 +94,14 @@
   </ol>
 
   <p>Once you are able to answer "yes" to all of these questions, you know that you've found a good search topic. Revisit the section on <a href="#Shareable"><b>Shareable titles</b></a> to craft an interesting title for the search topic. For this example, I might choose "Cutest High School Romance Movies That Will Make You Cry". Also see the video below for more info on how to do this.</p>
-  <h5>Writing a title that is BOTH Sharable and Searchable:</h5>
+  <h5>Writing a title that is BOTH Shareable and Searchable:</h5>
   <p>The most successful articles have both a shareable and searchable title, meaning that it shows up high in search results and has an intriguing title that is likely to be clicked. The below video from Income School does a good job of explaining how to do exactly that.</p>
   <div class="responsive-iframe-container mb-4">
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/o1HApYqYbfs"></iframe>
   </div>
 
   <h5>Final Note on Writing Titles:</h5>
-  <p>You'll likely have to change around your title 5-10 times before you have one that is clear and concise, envokes curiosity, and is on a topic teens are searching. Of course, there are always exceptions to the rules but the majority of your pitched article titles should meet these criteria.</p>
+  <p>You'll likely have to change around your title 5-10 times before you have one that is clear and concise, evokes curiosity, and is on a topic teens are searching. Of course, there are always exceptions to the rules but the majority of your pitched article titles should meet these criteria.</p>
 
   <h5>Choosing a thumbnail</h5>
   <p>IMPORTANT: Read <a target="_blank" href="/finding-images">Finding Images</a> first to make sure you are finding images safely!</p>
@@ -120,7 +120,7 @@
   <%= image_tag("thumbnail_2.jpg", class: "image_fit_scrn mb-4") %>
 
   <h4>Writing a description:</h4>
-  <p>The description should include enough information for anyone to know what you were thinking of for this article and why it is relevant for The Teen Magazine's target demographic. Include links to any places where you got the idea from (ie. Quora, Reddit, other blog article etc.). If it's an advice article, specify the type of writer this topic is best suited for. For example, an article about how to write your college application should be written by a writer who is, or has already gone through, the process.</p>
+  <p>The description should include enough information for anyone to know what you were thinking of for this article and why it is relevant for The Teen Magazine's target demographic. Include links to any places where you got the idea from (ie. Quora, Reddit, other blog articles etc.). If it's an advice article, specify the type of writer this topic is best suited for. For example, an article about how to write your college application should be written by a writer who is, or has already gone through, the process.</p>
   <p>If you did a search analysis for this article topic, include the target search term/phrase. Explain what the current search results are and what the writer who claims this topic needs to do to outperform existing articles (ie. list more examples, be more in-depth, more specific, better researched etc.).</p>
   <p>Be specific and in-depth. Your description should be around 60-120 words.</p>
 
