--- a/app/views/pages/start.html.erb
+++ b/app/views/pages/start.html.erb
@@ -8,13 +8,12 @@
   <h4>As an Editor for The Teen Magazine:</h4>
   <ul>
     <li>You will be expected to remain an active member of our writer community and complete 10 new pitches and review at least 8 submitted articles every month. Reviews encompass any time that you move an article to "In Review" and either
-    reject with requested changes or approve for publishing (more info in <a target="_blank" href="/article-requirements"><b>Reviewing Articles</b></a>).
+    reject it with requested changes or approve it for publishing (more info in <a target="_blank" href="/article-requirements"><b>Reviewing Articles</b></a>).
     <li>You will receive your own <a target="_blank" href="/editors/<%= current_user.slug %>"><b>Editor Dashboard</b></a> along with your updated <a target="_blank" href="<%= user_path(id: current_user.slug, page: 'public') %>"><b>Editor Profile</b></a> which will keep track of how many writers you've directly helped at The Teen Magazine.
     <li>You will be able to view all writers and accept submitted profiles.</li>
   </ul>
 
   <p>Please make sure you've read through all the onboarding materials (also found on your editor dashboard) before reviewing any articles or submitted pitches.</p>
-  <p>You've completed 1/4 onboarding materials.</p>
 
   <svg id="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
