--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -3,23 +3,23 @@
   <p>
     <b class="yellow">Please read this entire tutorial before you write your first article.</b>
   </p>
-  <p>Articles should be formatted so that they can be skimmmed over and be understandable. This means that your article should follow these basic requirements:</p>
+  <p>Articles should be formatted so that they can be skimmed over and be understandable. This means that your article should follow these basic requirements:</p>
   <ol>
     <li>Article topics should be relevant/useful and include a perspective *unique* to you.</li>
     <li>Articles should be conversational with good grammar and easy-to-read formatting.</li>
     <li>No paragraphs should be more than four lines on desktop. </li>
     <li>Articles should have at least one image, preferably more.</li>
-    <li>Articles should be split up into multple sections with headers. Avoid one worded headers if you can. Be creative!</li>
+    <li>Articles should be split up into multiple sections with headers. Avoid one worded headers if you can. Be creative!</li>
   </ol>
 
-  <p>Additionally, articles should be at minimum 1000 words. Shorter articles should also have lots of images.</p>
+  <p>Additionally, articles should be around 1000 words or more. Shorter articles should also have lots of images.</p>
 
   <h3>Articles Should Follow This Structure:</h3>
   <p>
     - <b>Title:</b> Titles should be at least six words long. They should reflect keywords that people are searching for and be unique.
   </p>
   <p>
-    - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engin Optimization) and therefore should be descriptive and include words that describe what the article is going to be about. <i>Do not start your article with something like "Hey!" or "Hi everyone!" or reference your last article.</i>
+    - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engine Optimization) and therefore should be descriptive and include words that describe what the article is going to be about. <i>Do not start your article with something like "Hey!" or "Hi everyone!" or reference your last article.</i>
   </p>
   <p>
     - <b>Headers:</b> Your Article needs to be split up with descriptive headers. To make it easier to include headers, make your title something like: 7 steps to having healthy hair or 10 best places in the world to travel for your senior trip.
