--- a/app/views/pitches/_review_pitch.html.erb
+++ b/app/views/pitches/_review_pitch.html.erb
@@ -18,7 +18,7 @@
             <li>Is the title shareable and/or searchable?<a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute" target="_blank" href="/pitch-requirements#second-question"><i class="fad fa-info-circle"></i></a></li>
             <li>Does the image thumbnail fit this topic well and is it good quality?<a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute" target="_blank" href="/pitch-requirements#third-question"><i class="fad fa-info-circle"></i></a></li>
           </ol>
-          <p>If you answered yes to all these questions, you may choose "Approved" from the dropdown menu and save. If you answered no to at least one of the questions, select "Rejected", and mark the reason(s) why. If you are unsure, either let another editor review this pitch or contact mia@theteenmagazine.com to ask a clarifying question about the pitch requirements.</p>
+          <p>If you answered yes to all these questions, you may choose "Approved" from the dropdown menu and save. If you answered no to at least one of the questions, select "Rejected," and mark the reason(s) why. If you are unsure, either let another editor review this pitch or contact mia@theteenmagazine.com to ask a clarifying question about the pitch requirements.</p>
         </div>
         <div class="pb-1">
           <p class="d-inline">Reject or Approve pitch:</p>
