--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -83,7 +83,7 @@
   <div class="thelink">
     <a href="/choosing-a-topic">
       <div class="G2 box foo">
-        <p>Choosing A Topic</p>
+        <p>Pitching an Article</p>
       </div>
     </a>
   </div>
