--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -48,15 +48,13 @@
     <% end %>
     <% else %>
       <% if !@article.is_published? %>
-        <% if @claimed_user.id == current_user.id %>
-          <%= form_for @pitch do |f| %>
-            <%= f.hidden_field :claimed_id, value: nil %>
-            <p class="pitch_usr mb-4">If you unclaim this pitch, the associated article will become locked unless you claim the pitch again. If this pitch was created by an editor, the topic will become available to any writer at TTM. Go to your started <%= link_to("draft", @article, class: "pitch_btn", target: "_blank") %>.</p>
-            <div class="btn_cntnr" style="margin-top: -1rem;">
-              <%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }, class: "newpost--new--profile mb-0 mr-0", style: "padding-left: 2.5em; padding-right: 2.5em;" %>
-            </div>
-            <br>
-          <% end %>
+        <%= form_for @pitch do |f| %>
+          <%= f.hidden_field :claimed_id, value: nil %>
+          <p class="pitch_usr mb-4">If you unclaim this pitch, the associated article will become locked unless you claim the pitch again. If this pitch was created by an editor, the topic will become available to any writer at TTM. Go to your started <%= link_to("draft", @article, class: "pitch_btn", target: "_blank") %>.</p>
+          <div class="btn_cntnr" style="margin-top: -1rem;">
+            <span data-toggle="tooltip" title="<%= @tooltip %>"><%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }, class: "newpost--new--profile mb-0 mr-0 #{@class}", style: "padding-left: 2.5em; padding-right: 2.5em;" %></span>
+          </div>
+          <br>
         <% end %>
       <% else %>
         <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn", target: "_blank") %> was published on <%= @article.publish_at.strftime("%A, %B %d") %>.</p>
