--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -125,7 +125,7 @@
     <div class="thelink">
       <a href="/choosing-a-topic">
         <div class="G2 box foo">
-          <p>Choosing A Topic</p>
+          <p>Pitching an Article</p>
         </div>
       </a>
     </div>
