--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,14 +65,13 @@
             <div class="border">
               <nav class="nav_article">
                 <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
-                <a class="link" style="color: #EF265F;" href="/categories/ttmvoices"><i>#TTMVoices</i></a>
                 <a class="link" href="/categories/student-life">Student Life</a>
                 <a class="link" href="/categories/wellness">Wellness</a>
                 <a class="link" href="/categories/beauty-style">Beauty & Style</a>
                 <a class="link" href="/categories/culture">Culture</a>
-                <a class="link" href="/categories/ttmvoices">Relationships</a>
+                <a class="link" href="/categories/relationships">Relationships</a>
                 <a class="link" href="/categories/lifestyle">Lifestyle</a>
-                <!-- <a class="link" href="/categories/op-ed">Op-Ed</a> -->
+                <a class="link" href="/categories/op-ed">Op-Ed</a>
                 <% if user_signed_in? %>
                   <%= link_to "Create", pitches_path, class: "link" %>
                   <%= link_to "Dashboard", user_path(current_user), class: "link" %>
