css and wording fixes

--- a/app/views/pages/reviewing_articles.html.erb
+++ b/app/views/pages/reviewing_articles.html.erb
@@ -63,7 +63,7 @@
 
   <h3>6. Does the most important information <b><i>jump out of the page</i></b>?</h3>
 
-  <p>These could be the use of quotes, images, headers, bolded text, highlighted text, italics, short paragraphs etc.</p>
+  <p>An article should never be just a wall of text. Making it easy to read can be done through the use of small paragraphs, quotes, images, headers, bolded text, highlighted text, italics, etc.. Please note that all headers (besides for subtopics) should be Header 2.</p>
 
   <h3>7. Is the article <b><i>entirely</i></b> free from grammar and spelling mistakes?</h3>
 
@@ -76,7 +76,7 @@
 
   <p>As a side note, exclamation points should be used sparingly. Replace every exclamation mark with a period unless there is a very strong reason to leave it in.</p>
 
-  <h5>8. Is the article long enough for this topic?</h5>
+  <h3>8. Is the article long enough for this topic?</h3>
   <p>
     Finally, determine whether or not this article is long enough for the topic. For example, list articles often should be longer (ie. giving 15+ examples rather than 5), however if the writer went in depth with each one, it's okay that the article only has 5 examples.
   </p>
