--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -16,6 +16,17 @@
    }
 }
 
+.theimages, .criteria, .privacy, .topics, .writing {
+  a {
+    color: #4ABEB6;
+    font-weight: bold;
+    &:hover {
+      background-color: #FCD04D;
+      opacity: 1;
+    }
+  }
+}
+
 .progress-bar {
   background-color: #EF265F !important;
 }
