fixed link on new pitch form

--- a/app/views/pages/reviewing_articles.html.erb
+++ b/app/views/pages/reviewing_articles.html.erb
@@ -63,7 +63,7 @@
 
   <h3>6. Does the most important information <b><i>jump out of the page</i></b>?</h3>
 
-  <p>An article should never be just a wall of text. Making it easy to read can be done through the use of small paragraphs, quotes, images, headers, bolded text, highlighted text, italics, etc.. Please note that all headers (besides for subtopics) should be Header 2.</p>
+  <p>An article should never be just a wall of text. Making it easy to read can be done through the use of small paragraphs, quotes, images, headers, bolded text, highlighted text, italics, etc.. Please note that all headers (besides subtopics) should be Header 2.</p>
 
   <h3>7. Is the article <b><i>entirely</i></b> free from grammar and spelling mistakes?</h3>
 
