added target blank to link

--- a/app/views/pitches/new.html.erb
+++ b/app/views/pitches/new.html.erb
@@ -1,5 +1,5 @@
 <div id="banner_writing" class="editor"></div>
 <div class="apply_wrapper pitch_form_wrapper">
-  <h1 class="d-inline">Pitch an Article</h1><a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute" href="/choosing-a-topic"><i class="fad fa-info-circle"></i></a>
+  <h1 class="d-inline">Pitch an Article</h1><a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute" target="_blank" href="/choosing-a-topic"><i class="fad fa-info-circle"></i></a>
   <%= render "/pitches/form" %>
 </div>
