--- a/app/views/application_mailer/request_editors_to_edit_articles.html.erb
+++ b/app/views/application_mailer/request_editors_to_edit_articles.html.erb
@@ -12,7 +12,7 @@
     <p>This is just an automated reminder to let you know that there are <%= @submitted %> articles waiting to be reviewed on The Teen Magazine.
       If you have some free time today, it would be really helpful if you can claim a couple article reviews!
     </p>
-    <p><a href="https://www.theteenmagazine.com/reviews">https://www.theteenmagazine.com/reviews</a></p>
+    <p><a href="https://www.theteenmagazine.com/login">https://www.theteenmagazine.com/login</a></p>
     <p>Thank you!</p>
     <p>Best,<br>
        Mia</p>
